--- a/LibraryWeb/src/main/webapp/WEB-INF/web.xml
+++ b/LibraryWeb/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,8 @@
 	version="2.5">
 	<!-- First page <welcome-file-list> <welcome-file>login.jsp</welcome-file> 
 		</welcome-file-list> -->
+	
+	<!-- Spring MVC -->
 	<servlet>
 		<servlet-name>dispatcher</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet
@@ -17,7 +19,10 @@
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/dispatcher-servlet.xml</param-value>
+		<param-value>
+			/WEB-INF/dispatcher-servlet.xml
+			/WEB-INF/spring-security.xml	
+		</param-value>
 	</context-param>
 
 	<listener>
@@ -26,4 +31,16 @@
 		</listener-class>
 	</listener>
 
+	<!-- Spring Security -->
+	<filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>
+			org.springframework.web.filter.DelegatingFilterProxy
+		</filter-class>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
 </web-app>
